# KSTestSnap

./: .gitignore  KSTestSnap.cabal  README.md
src/app/: Main.hs
src/lib/: Lib.hs
